--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,30 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore Python virtual environment
+venv/
+__pycache__/
+*.pyc
+*.pyo
+
+# Ignore environment files
+.env
+.env.local
+
+# Ignore database files
+*.sqlite3
+*.db
+
+# Ignore logs
+logs/
+*.log
+
+# Ignore compiled code
+*.pyc
+*.pyd
+*.pyo
+*.so
+
+# Ignore Node.js dependencies (if any)
+node_modules/
